Feature/improvements (#1)
* improved backend structure and applied profiles, also improved frontend ui

* integrated docker files and improved documentations

* fixed frontend

* fixed docker and swagger issues