@@ -2,81 +2,86 @@ package com.streamroom.service;
 
 import com.streamroom.dto.GameDTO;
 import com.streamroom.entity.Game;
+import com.streamroom.exception.ResourceNotFoundException;
+import com.streamroom.mapper.DtoMapper;
 import com.streamroom.repository.GameRepository;
-import lombok.RequiredArgsConstructor;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
-import jakarta.persistence.EntityNotFoundException;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
-public class GameService {
+@Transactional(readOnly = true)
+public class GameService implements IGameService {
+
+    private static final Logger log = LoggerFactory.getLogger(GameService.class);
+
     private final GameRepository gameRepository;
+    private final DtoMapper mapper;
 
+    public GameService(GameRepository gameRepository, DtoMapper mapper) {
+        this.gameRepository = gameRepository;
+        this.mapper = mapper;
+    }
+
+    @Override
+    @Transactional
     public GameDTO createGame(GameDTO gameDTO) {
-        Game game = Game.builder()
-                .title(gameDTO.getTitle())
-                .description(gameDTO.getDescription())
-                .coverImage(gameDTO.getCoverImage())
-                .genre(gameDTO.getGenre())
-                .developer(gameDTO.getDeveloper())
-                .isFeatured(false)
-                .build();
+        log.info("Creating game '{}'", gameDTO.title());
 
-        game = gameRepository.save(game);
-        return mapToDTO(game);
+        var game = new Game();
+        game.setTitle(gameDTO.title());
+        game.setDescription(gameDTO.description());
+        game.setCoverImage(gameDTO.coverImage());
+        game.setGenre(gameDTO.genre());
+        game.setDeveloper(gameDTO.developer());
+
+        return mapper.toGameDTO(gameRepository.save(game));
     }
 
+    @Override
+    @Transactional
     public GameDTO updateGame(Long id, GameDTO gameDTO) {
+        log.info("Updating game id={}", id);
+
         Game game = gameRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Game not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Game", id));
 
-        game.setTitle(gameDTO.getTitle());
-        game.setDescription(gameDTO.getDescription());
-        game.setCoverImage(gameDTO.getCoverImage());
-        game.setGenre(gameDTO.getGenre());
-        game.setDeveloper(gameDTO.getDeveloper());
-        game.setIsFeatured(gameDTO.getIsFeatured());
+        game.setTitle(gameDTO.title());
+        game.setDescription(gameDTO.description());
+        game.setCoverImage(gameDTO.coverImage());
+        game.setGenre(gameDTO.genre());
+        game.setDeveloper(gameDTO.developer());
+        game.setIsFeatured(gameDTO.isFeatured());
 
-        game = gameRepository.save(game);
-        return mapToDTO(game);
+        return mapper.toGameDTO(gameRepository.save(game));
     }
 
+    @Override
     public GameDTO getGameById(Long id) {
-        Game game = gameRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("Game not found"));
-        return mapToDTO(game);
+        return mapper.toGameDTO(gameRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Game", id)));
     }
 
+    @Override
     public List<GameDTO> getAllGames() {
-        return gameRepository.findAll()
-                .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        return gameRepository.findAll().stream().map(mapper::toGameDTO).toList();
     }
 
+    @Override
     public List<GameDTO> getFeaturedGames() {
-        return gameRepository.findByIsFeaturedTrue()
-                .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        return gameRepository.findByIsFeaturedTrue().stream().map(mapper::toGameDTO).toList();
     }
 
+    @Override
+    @Transactional
     public void deleteGame(Long id) {
+        log.info("Deleting game id={}", id);
+        if (!gameRepository.existsById(id)) {
+            throw new ResourceNotFoundException("Game", id);
+        }
         gameRepository.deleteById(id);
-    }
-
-    private GameDTO mapToDTO(Game game) {
-        return GameDTO.builder()
-                .id(game.getId())
-                .title(game.getTitle())
-                .description(game.getDescription())
-                .coverImage(game.getCoverImage())
-                .genre(game.getGenre())
-                .developer(game.getDeveloper())
-                .isFeatured(game.getIsFeatured())
-                .createdAt(game.getCreatedAt())
-                .build();
     }
 }
