@@ -2,100 +2,95 @@ package com.streamroom.service;
 
 import com.streamroom.dto.UserDTO;
 import com.streamroom.entity.User;
+import com.streamroom.exception.ResourceNotFoundException;
+import com.streamroom.mapper.DtoMapper;
 import com.streamroom.repository.UserRepository;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
-import jakarta.persistence.EntityNotFoundException;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-@RequiredArgsConstructor
-@Slf4j
-public class UserService {
+@Transactional(readOnly = true)
+public class UserService implements IUserService {
+
+    private static final Logger log = LoggerFactory.getLogger(UserService.class);
+
     private final UserRepository userRepository;
+    private final DtoMapper mapper;
 
+    public UserService(UserRepository userRepository, DtoMapper mapper) {
+        this.userRepository = userRepository;
+        this.mapper = mapper;
+    }
+
+    @Override
+    @Transactional
     public UserDTO createUser(UserDTO userDTO) {
-        log.info("Creating user: {}", userDTO.getUsername());
-        
-        User user = User.builder()
-                .username(userDTO.getUsername())
-                .email(userDTO.getUsername() + "@streamroom.local")
-                .displayName(userDTO.getDisplayName() != null ? userDTO.getDisplayName() : userDTO.getUsername())
-                .bio(userDTO.getBio())
-                .profileImage(userDTO.getProfileImage())
-                .bannerImage(userDTO.getBannerImage())
-                .twitchUsername(userDTO.getTwitchUsername())
-                .isAdmin(false)
-                .build();
+        log.info("Creating user '{}'", userDTO.username());
 
-        user = userRepository.save(user);
-        return mapToDTO(user);
+        var user = new User();
+        user.setUsername(userDTO.username());
+        user.setEmail(userDTO.username() + "@streamroom.local");
+        user.setDisplayName(userDTO.displayName() != null ? userDTO.displayName() : userDTO.username());
+        user.setBio(userDTO.bio());
+        user.setProfileImage(userDTO.profileImage());
+        user.setBannerImage(userDTO.bannerImage());
+        user.setTwitchUsername(userDTO.twitchUsername());
+        user.setIsAdmin(false);
+
+        return mapper.toUserDTO(userRepository.save(user));
     }
 
+    @Override
     public UserDTO getUserById(Long id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
-        return mapToDTO(user);
+        return mapper.toUserDTO(userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User", id)));
     }
 
+    @Override
     public UserDTO getUserByUsername(String username) {
-        User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
-        return mapToDTO(user);
+        return mapper.toUserDTO(userRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("User", username)));
     }
 
+    @Override
     public UserDTO getUserByTwitchUsername(String twitchUsername) {
-        User user = userRepository.findByTwitchUsername(twitchUsername)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
-        return mapToDTO(user);
+        return mapper.toUserDTO(userRepository.findByTwitchUsername(twitchUsername)
+                .orElseThrow(() -> new ResourceNotFoundException("User", twitchUsername)));
     }
 
+    @Override
+    @Transactional
     public UserDTO updateUser(Long id, UserDTO userDTO) {
+        log.info("Updating user id={}", id);
+
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException("User not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User", id));
 
-        if (userDTO.getDisplayName() != null) {
-            user.setDisplayName(userDTO.getDisplayName());
-        }
-        if (userDTO.getBio() != null) {
-            user.setBio(userDTO.getBio());
-        }
-        if (userDTO.getProfileImage() != null) {
-            user.setProfileImage(userDTO.getProfileImage());
-        }
-        if (userDTO.getBannerImage() != null) {
-            user.setBannerImage(userDTO.getBannerImage());
-        }
-        if (userDTO.getTwitchUsername() != null) {
-            user.setTwitchUsername(userDTO.getTwitchUsername());
-        }
+        if (userDTO.displayName() != null) user.setDisplayName(userDTO.displayName());
+        if (userDTO.bio() != null) user.setBio(userDTO.bio());
+        if (userDTO.profileImage() != null) user.setProfileImage(userDTO.profileImage());
+        if (userDTO.bannerImage() != null) user.setBannerImage(userDTO.bannerImage());
+        if (userDTO.twitchUsername() != null) user.setTwitchUsername(userDTO.twitchUsername());
 
-        user = userRepository.save(user);
-        return mapToDTO(user);
+        return mapper.toUserDTO(userRepository.save(user));
     }
 
+    @Override
     public List<UserDTO> getAllUsers() {
-        return userRepository.findAll()
-                .stream()
-                .map(this::mapToDTO)
-                .collect(Collectors.toList());
+        return userRepository.findAll().stream().map(mapper::toUserDTO).toList();
     }
 
+    @Override
+    @Transactional
     public void deleteUser(Long id) {
+        log.info("Deleting user id={}", id);
+        if (!userRepository.existsById(id)) {
+            throw new ResourceNotFoundException("User", id);
+        }
         userRepository.deleteById(id);
-    }
-
-    private UserDTO mapToDTO(User user) {
-        return UserDTO.builder()
-                .id(user.getId())
-                .username(user.getUsername())
-                .displayName(user.getDisplayName())
-                .bio(user.getBio())
-                .profileImage(user.getProfileImage())
-                .bannerImage(user.getBannerImage())
-                .twitchUsername(user.getTwitchUsername())
-                .build();
     }
 }
